--- a/sel-bdd-cuc-closesure/serenity.properties
+++ b/sel-bdd-cuc-closesure/serenity.properties
@@ -2,8 +2,8 @@
 #webdriver.driver=phantomjs
 
 webdriver.driver=firefox
-webdriver.chrome.driver=lib/chromedriver_mac
-webdriver.gecko.driver = lib/geckodriver_mac
+webdriver.chrome.driver=lib/chromedriver.exe
+webdriver.gecko.driver = lib/geckodriver.exe
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Selenium Serenity and Cucumber
 
